[package]
name = "playground"
version = "0.8.0" # remember to bump package.json
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/artichoke/playground"
homepage = "https://artichoke.run"
description = """
The Artichoke Playground is a WebAssembly frontend for Artichoke Ruby hosted at
https://artichoke.run.
"""
keywords = ["artichoke", "artichoke-ruby", "playground", "ruby", "wasm"]
categories = ["emulators", "wasm", "web-programming"]

[dependencies]
bstr = { version = "0.2.17", default-features = false }

[dependencies.artichoke]
version = "0.1.0-pre.0"
git = "https://github.com/artichoke/artichoke.git"
rev = "98fda6a34e9f7746069737f123fd2ffddb67faf6"
default-features = false
features = [
  "core-env",
  "core-math",
  "core-math-full",
  "core-random",
  "core-regexp",
  "output-strategy-capture",
  "stdlib-full",
]
