[package]
name = "playground"
version = "0.10.0" # remember to bump package.json
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/artichoke/playground"
homepage = "https://artichoke.run"
description = """
The Artichoke Playground is a WebAssembly frontend for Artichoke Ruby hosted at
https://artichoke.run.
"""
keywords = ["artichoke", "artichoke-ruby", "playground", "ruby", "wasm"]
categories = ["emulators", "wasm", "web-programming"]

[dependencies]
bstr = { version = "1.3.0", default-features = false }

[dependencies.artichoke]
version = "0.1.0-pre.0"
git = "https://github.com/artichoke/artichoke.git"
rev = "fbbe64921cc735639d6b165083aef01321531199"
default-features = false
features = [
  "core-env",
  "core-math",
  "core-math-full",
  "core-random",
  "core-regexp",
  "core-time",
  "output-strategy-capture",
  "stdlib-full",
]

[dependencies.scolapasta-string-escape]
version = "0.3.0"
git = "https://github.com/artichoke/artichoke.git"
rev = "fbbe64921cc735639d6b165083aef01321531199"
default-features = false
