[package]
name = "playground"
version = "0.12.0" # remember to bump package.json
publish = false
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
description = """
The Artichoke Playground is a WebAssembly frontend for Artichoke Ruby hosted at
https://artichoke.run.
"""
keywords = ["artichoke", "artichoke-ruby", "playground", "ruby", "wasm"]
categories = ["emulators", "wasm", "web-programming"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
bstr = { version = "1.8.0", default-features = false }

[dependencies.artichoke]
version = "0.1.0-pre.0"
git = "https://github.com/artichoke/artichoke.git"
rev = "b49699f43241f24b5781efe7de3f225b16c297ac"
default-features = false
features = [
  "core-env",
  "core-math",
  "core-math-full",
  "core-random",
  "core-regexp",
  "core-time",
  "output-strategy-capture",
  "stdlib-full",
]

[dependencies.scolapasta-string-escape]
version = "0.3.0"
git = "https://github.com/artichoke/artichoke.git"
rev = "b49699f43241f24b5781efe7de3f225b16c297ac"
default-features = false
